.helm/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        service.beta.kubernetes.io/aws-load-balancer-type: nlb
        service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "80"
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "TCP" 
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "3"
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "3"
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "10"
        service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "10"   
        service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
        meta.helm.sh/release-name: server-load-manager
        meta.helm.sh/release-namespace: server-load-manager
    labels:
        app.kubernetes.io/managed-by: Helm
    name: server-load-manager
    namespace: servers
spec:
    type: LoadBalancer
    ports:
        - name: baro-server
          targetPort: 27015
          port: 27015
          protocol: UDP
        - name: baro-server-q
          targetPort: 27016
          port: 27016
          protocol: UDP
        - name: zomboid-server
          targetPort: 16261
          port: 16261
          protocol: UDP
        - name: zomb-server-q
          targetPort: 16262
          port: 16262
          protocol: UDP
        - name: valheim-server
          targetPort: 2456
          port: 2456
          protocol: UDP
        - name: valheim-server-q
          targetPort: 2457
          port: 2457
          protocol: UDP
    selector:
        app: dedicated-server
    sessionAffinity: None
